fixed site-wide-nav text breaking on ie11

--- a/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
@@ -28,7 +28,7 @@
     @include bp('landscape')
       display: block
       flex-grow: 1
-      width: initial
+      width: auto
 
     &-link
       display: block
